--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -21,16 +21,16 @@ layout: default
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-			<h1>Simple Category Pages with vanilla Jekyll</h1>
+			<!-- <h1>Simple Category Pages with vanilla Jekyll</h1>
 
-{% unless page.content == '' %}
-  <p>{{ page.content }}</p>
-{% endunless %}
+				{% unless page.content == '' %}
+  					<p>{{ page.content }}</p>
+				{% endunless %}
 
-{% for post in site.categories.[page.category] %}
-  <h2><a href=""></a></h2>
-  <p></p>
-{% endfor %}
+				{% for post in site.categories.[page.category] %}
+  					<h2><a href=""></a></h2>
+  					<p></p>
+				{% endfor %} -->
 		</div>
 	</div>
 </div>
