--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -31,6 +31,7 @@ layout: default
   					<h2><a href=""></a></h2>
   					<p></p>
 				{% endfor %} -->
+				{{ content }}
 		</div>
 	</div>
 </div>
