--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,19 +28,22 @@ layout: default
 				{{ content }}
 
                 <hr>
-
+           
                 <ul class="pager">
-                    {% if page.previous.url %}
+                    
+                      {% if page.previous.categories %}
                     <li class="previous">
                         <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; Previous Post</a>
                     </li>
-                    {% endif %}
+                     {% endif %} 
+                     
                     {% if page.next.url %}
                     <li class="next">
                         <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Next Post &rarr;</a>
                     </li>
                     {% endif %}
                 </ul>
+                
 
             </div>
         </div>
